Fix tables so they fit nicely on mobile

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1100,7 +1100,7 @@ code.output {
 @media (max-width: 768px) {
   .mobile-side-scroller {
     overflow-x: scroll;
-    margin: 0 -40px;
+    margin: 0 -20px;
     padding: 0 10px;
   }
 }
